Fix: prevent pull refresh gesture on mobile

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -34,6 +34,8 @@ body,
 
 * {
   outline: none;
+  overscroll-behaviour: none;
+  touch-action: none;
 }
 
 button,
